# neuroedge

./: .gitignore  README.md  setup.sh
cli/: neuroedge.py
examples/voice_sensor_oled/: voice_sensor_oled.ino
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/components/llama_cpp/: CMakeLists.txt  ggml_esp32_config.h
firmware/components/llama_cpp/patches/: esp32_int32_fix.patch
firmware/components/tflite_micro/: CMakeLists.txt
firmware/main/: CMakeLists.txt  crc16.c  crc16.h  kws.cc  kws.h  main.c  mfcc.c  mfcc.h  model_loader.c  model_loader.h  model_runner.c  model_runner.h  uart_server.c  uart_server.h
sdk/arduino/: NeuroEdge.cpp  NeuroEdge.h
sdk/c/: neuroedge.c  neuroedge.h
tools/: pack_model.py
